...
              ),
            ),
          ],
        ),
        const SizedBox(height: 16),
        core_text_field.TextField(
          key: const ValueKey('instance_name_input'),
          controller: _nameController,
          labelText: AppLocalizations.of(context)!.enterNameHint,
          errorText: widget.viewModel.nameError == 'nameAlreadyExists'
              ? AppLocalizations.of(context)!.nameAlreadyExists
              : widget.viewModel.nameError,
          width: double.infinity,
...
              } else {
                Navigator.of(context).pop();
              }
            },
          ),
          Button.primary(
            key: const ValueKey('instance_creation_next_button'),
            widget.viewModel.currentStep == 3 ? AppLocalizations.of(context)!.createButton : AppLocalizations.of(context)!.nextButton,
            iconData: widget.viewModel.currentStep == 3
                ? Symbols.check_rounded
                : null,
            onPressed: widget.viewModel.canProceedToNextStep
                ? () async {
...
