...
              style: AppText.defaultTheme.headlineLarge.copyWith(
                color: AppColors.dark.onSurface,
              ),
            ),
            const SizedBox(height: 16),
            core_text_field.TextField(
              key: const ValueKey('content_search_input'),
              controller: _searchController,
              labelText: AppLocalizations.of(context)!.searchHint,
              width: double.infinity,
              isSearchField: true,
            ),
            const SizedBox(height: 16),
...
